syntax = "proto3";

package calculator;

option java_package = "com.gRPC.unary.calculator";
option java_multiple_files = true;

message Calculator {
    int32 input1 = 1;
    int32 input2 = 2;
}

message CalculatorRequest {
    Calculator calculator = 1;
}

message CalculatorResponse {
    int32 result = 1;
}

service CalculatorService {
    rpc calculator(CalculatorRequest) returns (CalculatorResponse) {};
}